@@ -170,6 +170,8 @@ rwi.stats.legacy(rwi, ids=NULL, period=c("max", "common"))
 
   \item{eps}{the expressed population signal}
 
+  \item{snr}{the signal to noise ratio}
+
   \item{n}{the average number of trees (for each year, a tree needs at
     least one non-\code{NA} core in order to be counted).  Not returned
     in the results of \code{rwi.stats.legacy}.}
@@ -196,47 +198,51 @@ rwi.stats.legacy(rwi, ids=NULL, period=c("max", "common"))
 \seealso{ \code{\link{detrend}}, \code{\link{cor}},
   \code{\link{read.ids}}, \code{\link{rwi.stats}},
   \code{\link{corr.rwl.seg}}  } 
-\examples{data(ca533)
-ca533.rwi <- detrend(rwl = ca533, method = "Mean") # mean is fast
-ca533.ids <- read.ids(ca533, stc = c(3, 2, 3))
-rwi.stats.running(ca533.rwi, ca533.ids)
-rwi.stats(ca533.rwi, ca533.ids)        # i.e. running.window = FALSE
-rwi.stats.legacy(ca533.rwi, ca533.ids) # rwi.stats prior to dplR 1.5.3
+\examples{data(gp.rwl)
+data(gp.po)
+gp.rwi <- cms(rwl = gp.rwl, po = gp.po)
+gp.ids <- read.ids(gp.rwl, stc = c(0, 2, 1))
+rwi.stats.running(gp.rwi, gp.ids)
+rwi.stats(gp.rwi, gp.ids)        # i.e. running.window = FALSE
+rwi.stats.legacy(gp.rwi, gp.ids) # rwi.stats prior to dplR 1.5.3
 \dontrun{
-library(graphics)
-## Plot the chronology showing a potential cutoff year based on eps
-ca533.rwi <- detrend(rwl = ca533, method = "Spline") # detrend again
-ca533.crn <- chron(ca533.rwi)
-## Running stats on the rwi with an 80 yr window
-foo <- rwi.stats.running(ca533.rwi, ca533.ids, window.length = 80)
-yrs <- as.numeric(rownames(ca533.crn))
-bar <- data.frame(yrs = c(min(yrs), foo$mid.year, max(yrs)),
-                  eps = c(NA, foo$eps, NA))
-par(mar = c(3, 3, 3, 3), mgp = c(1.25, 0.25, 0), tcl = 0.25,
-    mfcol = c(2, 1))
-plot(yrs, ca533.crn[, 1], type = "n", xlab = "Years", ylab = "RWI")
-xx <- c(500, 500, max(bar$yrs[bar$eps < 0.8], na.rm = TRUE),
-        max(bar$yrs[bar$eps < 0.8], na.rm = TRUE))
-yy <- c(-1, 3, 3, -1)
-polygon(xx, yy, col = "grey80")
-abline(h = 1, lwd = 1.5)
-lines(yrs, ca533.crn[, 1], col = "grey50")
-lines(yrs, ffcsaps(ca533.crn[, 1], nyrs = 32), col = "red", lwd = 2)
-par(new = TRUE)
-
-## Second plot is the chronology after the cut off only
-plot(bar$yrs, bar$eps, type = "b", xlab = "", ylab = "", axes = FALSE,
-     pch = 20, col = "blue")
-axis(4, at = pretty(foo$eps))
-mtext("EPS", side = 4, line = 1.25)
-box()
-yr.mask <- yrs > max(bar$yrs[bar$eps<0.8], na.rm = TRUE)
-plot(yrs[yr.mask], ca533.crn[yr.mask, 1], type = "n",
-     xlab = "Years", ylab = "RWI")
-abline(h = 1, lwd = 1.5)
-lines(yrs[yr.mask], ca533.crn[yr.mask, 1], col = "grey50")
-lines(yrs[yr.mask], ffcsaps(ca533.crn[yr.mask, 1], nyrs = 32),
-      col = "red", lwd = 2)
+  library(graphics)
+  ## Plot the chronology showing a potential cutoff year based on eps
+  eps.cut <- 0.92 # arbitrary
+  gp.crn <- chron(gp.rwi)
+  ## Running stats on the rwi with an window
+  foo <- rwi.stats.running(gp.rwi, gp.ids, window.length = 80)
+  yrs <- as.numeric(rownames(gp.crn))
+  bar <- data.frame(yrs = c(min(yrs), foo$mid.year, max(yrs)),
+                    eps = c(NA, foo$eps, NA))
+  par(mar = c(2, 2, 2, 2), mgp = c(1.1, 0.1, 0), tcl = 0.25,
+      mfcol = c(2, 1))
+  plot(yrs, gp.crn[, 1], type = "n", xlab = "Years", ylab = "RWI",
+       axes=FALSE)
+  xx <- c(500, 500, max(bar$yrs[bar$eps < eps.cut], na.rm = TRUE),
+          max(bar$yrs[bar$eps < eps.cut], na.rm = TRUE))
+  yy <- c(-1, 3, 3, -1)
+  polygon(xx, yy, col = "grey80")
+  abline(h = 1, lwd = 1.5)
+  lines(yrs, gp.crn[, 1], col = "grey50")
+  lines(yrs, ffcsaps(gp.crn[, 1], nyrs = 32), col = "red", lwd = 2)
+  par(new = TRUE)
+  
+  ## Second plot is the chronology after the cut off only
+  plot(bar$yrs, bar$eps, type = "b", xlab = "", ylab = "", axes = FALSE,
+       pch = 20, col = "blue")
+  axis(1);axis(2);axis(3);axis(4,at = pretty(foo$eps))
+  mtext("EPS", side = 4, line = 1.25)
+  box()
+  yr.mask <- yrs > max(bar$yrs[bar$eps<eps.cut], na.rm = TRUE)
+  plot(yrs[yr.mask], gp.crn[yr.mask, 1], type = "n",
+       xlab = "Years", ylab = "RWI",axes=FALSE)
+  abline(h = 1, lwd = 1.5)
+  lines(yrs[yr.mask], gp.crn[yr.mask, 1], col = "grey50")
+  lines(yrs[yr.mask], ffcsaps(gp.crn[yr.mask, 1], nyrs = 32),
+        col = "red", lwd = 2)
+  axis(1);axis(2);axis(3);axis(4)
+  box()
 }
 }
 \keyword{ misc }
