@@ -1,5 +1,12 @@
 * CHANGES IN dplR VERSION 1.6.0
 
+File: rwi.stats.running.R
+-------------------------
+
+- Added signal-to-noise ratio as an output. Followed pg 109 in
+  Cook's chapter in Huhges et al. 2011.
+
+
 * CHANGES IN dplR VERSION 1.5.9
 
 Files: dplR.h, rcompact.c, redfit.c
